crates/monochange_integration_tests/tests/snapshots/init_diagnostics__forced_init_rejects_shared_package_paths_without_overwriting_configuration.snap
---
source: crates/monochange_integration_tests/tests/init_diagnostics.rs
expression: error.to_string()
---
config error: cannot initialize multiple package owners at `.`: `utility` (cargo) and `utility` (npm). Move the packages into separate directories or create monochange.toml manually with one package owner for this path
