crates/monochange_integration_tests/tests/snapshots/init_diagnostics__populate_explains_empty_defaults_and_preserves_custom_workflows.snap
---
source: crates/monochange_integration_tests/tests/init_diagnostics.rs
expression: output
---
left [workspace]/monochange.toml unchanged; this version provides no default CLI workflow aliases. Use `monochange command` to define custom workflows
