crates/monochange_integration_tests/tests/snapshots/init_diagnostics__triple_same_name.snap
---
source: crates/monochange_integration_tests/tests/init_diagnostics.rs
expression: "config[\"package\"]"
---
{
  "utility": {
    "path": "packages/first",
    "type": "npm"
  },
  "utility-npm": {
    "path": "packages/second",
    "type": "npm"
  },
  "utility-npm-2": {
    "path": "packages/third",
    "type": "npm"
  }
}
